--- a/app/src/main/res/navigation/user_navi_graph.xml
+++ b/app/src/main/res/navigation/user_navi_graph.xml
@@ -51,5 +51,13 @@
         <action
             android:id="@+id/action_mainFragment_to_emergencyComplaintFragment"
             app:destination="@id/emergencyComplaintFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.example.crimealert.view.civillian.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
