--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="Create New Acount"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30sp" />
 
         <TextView
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="72dp"
             android:text="First Name"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp" />
 
         <EditText
@@ -43,7 +43,7 @@
             android:layout_marginTop="7dp"
             android:background="@android:color/transparent"
             android:hint="Muhammad Ahsan"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textColorHint="@color/light_gray"
             android:textSize="16sp" />
 
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Last Name"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp" />
 
         <EditText
@@ -69,7 +69,7 @@
             android:background="@android:color/transparent"
             android:hint="Abdul Aziz"
             android:inputType="text"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textColorHint="@color/light_gray"
             android:textSize="16sp" />
 
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="CNIC"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp" />
 
         <EditText
@@ -94,7 +94,7 @@
             android:layout_marginTop="7dp"
             android:background="@android:color/transparent"
             android:hint="1234568907"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textColorHint="@color/light_gray"
             android:textSize="16sp" />
 
@@ -109,7 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Email"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp" />
 
         <EditText
@@ -120,7 +120,7 @@
             android:background="@android:color/transparent"
             android:hint="ahsan@gmail.com"
             android:inputType="textEmailAddress"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textColorHint="@color/light_gray"
             android:textSize="16sp" />
 
@@ -135,7 +135,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Password"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp" />
 
         <EditText
@@ -146,7 +146,7 @@
             android:background="@android:color/transparent"
             android:hint="*******"
             android:inputType="textPassword"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textColorHint="@color/light_gray"
             android:textSize="16sp" />
 
@@ -168,7 +168,7 @@
         <Button
             android:id="@+id/btn_sign_up"
             style="@style/Widget.Material3.Button"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="@color/mycolor2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -182,6 +182,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@color/white"
             android:layout_marginTop="20dp"
             android:text="Already have an acount ?"
             android:textSize="14sp" />
@@ -195,7 +196,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:SpinKit_Color="@color/black" />
+            app:SpinKit_Color="@color/white" />
 
 
     </LinearLayout>
