--- a/app/src/main/res/drawable/roundbtn.xml
+++ b/app/src/main/res/drawable/roundbtn.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--<shape xmlns:android="http://schemas.android.com/apk/res/android"-->
+<?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:color="#F8757474"
     >
 
