--- a/app/src/main/res/navigation/user_navi_graph.xml
+++ b/app/src/main/res/navigation/user_navi_graph.xml
@@ -128,7 +128,17 @@
         tools:layout="@layout/fragment_admin_manage_feedback" />
     <fragment
         android:id="@+id/adminManageEmergencyComplaintFragment"
-        android:name="com.example.crimealert.AdminManageEmergencyComplaintFragment"
+        android:name="com.example.crimealert.view.admin.AdminManageEmergencyComplaintFragment"
         android:label="fragment_admin_manage_emergency_complaint"
         tools:layout="@layout/fragment_admin_manage_emergency_complaint" />
+    <fragment
+        android:id="@+id/allUserFragment"
+        android:name="com.example.crimealert.view.admin.AllUserFragment"
+        android:label="fragment_all_user"
+        tools:layout="@layout/fragment_all_user" />
+    <fragment
+        android:id="@+id/adminManageUserFragment"
+        android:name="com.example.crimealert.view.admin.AdminManageUserFragment"
+        android:label="fragment_admin_manage_user"
+        tools:layout="@layout/fragment_admin_manage_user" />
 </navigation>
